# **************************************************************************
# Process this file with automake to generate Makefile.in.

INCLUDES = -I$(top_srcdir)/include
LIBS = 

noinst_LTLIBRARIES = libnodes.la

libnodes_la_CFLAGS = \
	$(PROFIT_CFLAGS)

libnodes_la_SOURCES = \
	color_palette.c \
	face.c \
	group.c \
	header.c \
	instance_definition.c \
	instance_reference.c \
	material.c \
	material_palette.c \
	matrix.c \
	morph_vertex_list.c \
	object.c \
	obsolete_vertex_with_color.c \
	obsolete_vertex_with_normal.c \
	pop_attribute.c \
	pop_extension.c \
	pop_level.c \
	pop_subface.c \
	push_attribute.c \
	push_extension.c \
	push_level.c \
	push_subface.c \
	texture.c \
	vertex_list.c \
	vertex_palette.c \
	vertex_with_color.c \
	vertex_with_normal.c \
	vertex_with_normal_and_texture.c \
	vertex_with_texture.c

# EOF **********************************************************************
