# **************************************************************************
# Process this file with automake to generate Makefile.in.

INCLUDES = -I$(top_srcdir)/include
LIBS = 

noinst_LTLIBRARIES = libutil.la

libutil_la_CFLAGS = \
	$(PROFIT_CFLAGS)

libutil_la_SOURCES = \
	array.c \
	bfile.c \
	mempool.c

# EOF **********************************************************************
